@@ -49,7 +49,10 @@ public class VersionCommand extends BukkitCommand {
         this.description = "Gets the version of this server including any plugins in use";
         this.usageMessage = "/version [plugin name]";
         this.setPermission("bukkit.command.version");
-        this.setAliases(Arrays.asList("ver", "about"));
+        // Memegot start
+        // this.setAliases(Arrays.asList("ver", "about"));
+        this.setAliases(List.of("ver")); // disabled /about
+        // Memegot end
     }
 
     @Override
